cargo-features = ["per-package-target"]

[package]
name = "chainload-app"
version = "0.1.0"
edition = "2021"
default-target = "thumbv6m-none-eabi"

[dependencies]
embassy-executor = { path="../embassy/embassy-executor", features = [
    "arch-cortex-m", "executor-thread", "nightly", "executor-interrupt",
    "integrated-timers"] }
embassy-rp = { path="../embassy/embassy-rp", default-features = false, features=[
    "nightly",
    "unstable-pac",
    "unstable-traits",
    "time-driver",
    "critical-section-impl",
    "intrinsics",
    "rom-v2-intrinsics",
    ]}
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb" }
embassy-time = { version = "0.1.2", path = "../embassy/embassy-time", features = ["nightly", "unstable-traits"] }
embassy-net = { version = "0.1.0", path = "../embassy/embassy-net", features = ["nightly", "udp", "proto-ipv4", "medium-ethernet"] }
embassy-sync = { path = "../embassy/embassy-sync", features = ["nightly"] }
embedded-io-async = { version = "0.5.0", features = [] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
static_cell = { version = "1.1", features = ["nightly"]}
heapless = "0.7.15"

cyw43 = { path = "../embassy/cyw43", features = [] }
cyw43-pio = { path = "../embassy/cyw43-pio", features = [] }

net-logger = { path = "../net-logger" }
defmt = "0.3"
