
[package]
name = "chainloader"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { path="../embassy/embassy-executor", features = [
    "arch-cortex-m", "executor-thread", "nightly", "executor-interrupt",
    "integrated-timers"] }
embassy-rp = { path="../embassy/embassy-rp", features=["nightly", "unstable-pac", "unstable-traits", "time-driver"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb" }
embassy-time = { version = "0.1.2", path = "../embassy/embassy-time", features = ["nightly", "unstable-traits"] }
embassy-net = { version = "0.1.0", path = "../embassy/embassy-net", features = ["nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-sync = { path = "../embassy/embassy-sync", features = ["nightly"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embedded-io-async = { version = "0.5.0", features = [] }
critical-section = "1.1"

# debugging
#defmt = "0.3"
#defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
embassy-usb-logger = { version = "0.1.0", path = "../embassy/embassy-usb-logger" }
log = "0.4"

# wifi
cyw43 = { path = "../embassy/cyw43", features = [] }
cyw43-pio = { path = "../embassy/cyw43-pio", features = [] }

static_cell = { version = "1.1", features = ["nightly"]}
heapless = "0.7.15"

[features]
default = ["debug"]
debug = [
    #"embassy-rp/defmt",
    #"cyw43/defmt",
    #"cyw43/firmware-logs",
    #"cyw43-pio/defmt",
    "panic-reset"
]
