[package]
name = "net-logger"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
embassy-net = { path = "../embassy/embassy-net", features = ["nightly", "tcp", "udp", "medium-ethernet", "defmt"] }
embassy-futures = { path = "../embassy/embassy-futures" }
embassy-sync = { path = "../embassy/embassy-sync", features = ["nightly"] }
embassy-time = { path = "../embassy/embassy-time", features = ["nightly", "unstable-traits"] }

critical-section = "1.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
embedded-io-async = { version = "0.6.0", features = [] }
static_cell = { version = "1.1", features = ["nightly"]}

defmt = { version= "0.3", features = ["encoding-rzcobs"] }