cargo-features = ["per-package-target"]

[package]
name = "picopif"
version = "0.1.0"
edition = "2021"
default-target = "thumbv6m-none-eabi"

[dependencies]
embassy-executor = { path="../embassy/embassy-executor", features = [
    "arch-cortex-m", "executor-thread", "nightly", "executor-interrupt",
    "integrated-timers"] }
embassy-rp = { path="../embassy/embassy-rp", features=[
    "nightly",
    "unstable-pac",
    "unstable-traits",
    "time-driver",
    "intrinsics",
    "rom-v2-intrinsics",
    "critical-section-impl",
] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb" }
embassy-time = { version = "0.1.2", path = "../embassy/embassy-time", features = ["nightly", "unstable-traits"] }
embassy-net = { version = "0.1.0", path = "../embassy/embassy-net", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync = { path = "../embassy/embassy-sync", features = ["nightly"] }
embassy-futures = { path = "../embassy/embassy-futures" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-storage = { version = "0.3" }
embedded-storage-async = { version = "0.4.0" }
embedded-io-async = { version = "0.5.0", features = [] }
critical-section = "1.1"

# debugging
defmt = { version= "0.3", features = ["encoding-rzcobs"] }

panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
embassy-usb-logger = { version = "0.1.0", path = "../embassy/embassy-usb-logger", optional = true }
log = { version = "0.4", optional = true }

# wifi
cyw43 = { path = "../embassy/cyw43", features = [] }
cyw43-pio = { path = "../embassy/cyw43-pio", features = [] }

static_cell = { version = "1.1", features = ["nightly"]}
heapless = "0.7.15"

net-logger = { path = "../net-logger" }

[features]
default = ["defmt"]
usb_log = [
    "log",
    "embassy-usb-logger",
    "cyw43/log",
    "cyw43/firmware-logs",
]
defmt = [
    "embassy-executor/defmt",
    "embassy-rp/defmt",
    "embassy-usb/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-net/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
]
